--- a/root/app/package.json
+++ b/root/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello_world-alpine-node6.2",
+  "name": "helloworld-alpine-node6.2",
   "version": "1.0.0",
   "description": "A simple hellow world server to demonstrate Docker containers & microservices",
   "main": "app.js",
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ian Scrivener",
+  "repository","https://github.com/ianscrivener/hello_world-alpine-node",
   "license": "MIT",
   "dependencies": {
     "express": "4.13.4"
