--- a/root/app/package.json
+++ b/root/app/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ian Scrivener",
-  "repository","https://github.com/ianscrivener/hello_world-alpine-node",
+  "repository": "https://github.com/ianscrivener/hello_world-alpine-node",
   "license": "MIT",
   "dependencies": {
     "express": "4.13.4"
