--- a/root/app/package.json
+++ b/root/app/package.json
@@ -10,6 +10,6 @@
   "repository": "https://github.com/ianscrivener/docker-helloworld-ubuntu-node",
   "license": "MIT",
   "dependencies": {
-    "express": "4.13.4"
+    "express": "^4.13.4"
   }
 }
